@@ -11,7 +11,9 @@ Changes log
         - Fixed bug in date format generated by Atom feeds.
         - The internal HTTP server now shuts down gracefully.
         - Added a "gracefulShutdown" parameter on the Jetty connector.
-          Suggested by Arjohn Kampman.        
+          Suggested by Arjohn Kampman.       
+        - Registration of HTTP and JavaMail clients was missing in the
+          GAE edition. Reported by MyloC.
     - Enhancements
         - Upgraded Jetty library to version 6.1.18.
         - SpringServerServlet nows gets its component fully configured,
